@@ -12,6 +12,7 @@ import com.datastax.oss.driver.api.querybuilder.insert.RegularInsert;
 import com.datastax.oss.driver.api.querybuilder.select.Select;
 import com.sojka.pomeranian.chat.db.AstraConnector;
 import com.sojka.pomeranian.chat.dto.MessagePage;
+import com.sojka.pomeranian.chat.exception.AstraException;
 import com.sojka.pomeranian.chat.model.Message;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
@@ -36,8 +37,6 @@ public class MessageRepositoryImpl implements MessageRepository {
     private static final String CONVERSATION_INDEX_TABLE = "conversations_index";
     private static final String KEYSPACE = "messages";
 
-    private final int pageSize = 10;
-
     private final AstraConnector connector;
 
     @Override
@@ -53,8 +52,7 @@ public class MessageRepositoryImpl implements MessageRepository {
             try {
                 pagingStateBuffer = ByteBuffer.wrap(Base64.getUrlDecoder().decode(pageState));
             } catch (IllegalArgumentException e) {
-                log.error(String.format("Invalid pageState for room_id %s: %s", roomId, e.getMessage()), e);
-                return new MessagePage(List.of(), null);
+                throw new AstraException("Invalid pageState for room_id %s: %s".formatted(roomId, e.getMessage()), e);
             }
         }
 
@@ -100,10 +98,10 @@ public class MessageRepositoryImpl implements MessageRepository {
             return new MessagePage(messages, nextPageState);
         } catch (IllegalStateException e) {
             log.error(String.format("CqlSession not initialized for room_id %s: %s", roomId, e.getMessage()), e);
-            throw new RuntimeException("Cassandra session not initialized", e);
+            throw new AstraException("Cassandra session not initialized", e);
         } catch (Exception e) {
             log.error(String.format("Failed to find messages for room_id %s: %s", roomId, e.getMessage()), e);
-            return new MessagePage(List.of(), null);
+            throw new AstraException("Unexpected issue", e);
         }
     }
 
@@ -112,103 +110,103 @@ public class MessageRepositoryImpl implements MessageRepository {
      */
     @Override
     public Message save(Message message) {
-        // Insert into messages.messages
-        RegularInsert messageInsert = QueryBuilder.insertInto(KEYSPACE, MESSAGES_TABLE)
-                .value("room_id", literal(message.getRoomId()))
-                .value("created_at", literal(message.getCreatedAt()))
-                .value("message_id", literal(message.getMessageId()))
-                .value("profile_id", literal(message.getProfileId()))
-                .value("username", literal(message.getUsername()))
-                .value("recipient_profile_id", literal(message.getRecipientProfileId()))
-                .value("recipient_username", literal(message.getRecipientUsername()))
-                .value("content", literal(message.getContent()))
-                .value("message_type", literal(message.getMessageType()))
-                .value("resource_id", literal(message.getResourceId()))
-                .value("thread_id", literal(message.getThreadId()))
-                .value("edited_at", literal(message.getEditedAt()))
-                .value("deleted_at", literal(message.getDeletedAt()))
-                .value("pinned", literal(message.getPinned()))
-                .value("metadata", literal(message.getMetadata()));
-
-        // Sender: Query index for old last_message_at
-        SimpleStatement senderIndexSelect = QueryBuilder.selectFrom(KEYSPACE, CONVERSATION_INDEX_TABLE)
-                .column("last_message_at")
-                .whereColumn("user_id").isEqualTo(literal(message.getProfileId()))
-                .whereColumn("room_id").isEqualTo(literal(message.getRoomId()))
-                .build();
-        Row senderIndexRow = connector.getSession().execute(senderIndexSelect).one();
-        Instant senderOldLastMessageAt = senderIndexRow != null ? senderIndexRow.getInstant("last_message_at") : null;
-
-        // Sender: Batch index update, old conversation delete, new conversation insert
-        var senderBatch = new ArrayList<BatchableStatement<?>>();
-        senderBatch.add(QueryBuilder.insertInto(KEYSPACE, CONVERSATION_INDEX_TABLE)
-                .value("user_id", literal(message.getProfileId()))
-                .value("room_id", literal(message.getRoomId()))
-                .value("last_message_at", literal(message.getCreatedAt()))
-                .build());
-        if (senderOldLastMessageAt != null) {
-            senderBatch.add(QueryBuilder.deleteFrom(KEYSPACE, CONVERSATIONS_TABLE)
-                    .whereColumn("user_id").isEqualTo(literal(message.getProfileId()))
-                    .whereColumn("last_message_at").isEqualTo(literal(senderOldLastMessageAt))
-                    .whereColumn("room_id").isEqualTo(literal(message.getRoomId()))
-                    .build());
-        }
-        senderBatch.add(QueryBuilder.insertInto(KEYSPACE, CONVERSATIONS_TABLE)
-                .value("user_id", literal(message.getProfileId()))
-                .value("last_message_at", literal(message.getCreatedAt()))
-                .value("room_id", literal(message.getRoomId()))
-                .value("other_user_id", literal(message.getRecipientProfileId()))
-                .value("other_username", literal(message.getRecipientUsername()))
-                .value("last_message_content", literal(message.getContent()))
-                .build());
-
-        // Recipient: Query index for old last_message_at
-        SimpleStatement recipientIndexSelect = QueryBuilder.selectFrom(KEYSPACE, CONVERSATION_INDEX_TABLE)
-                .column("last_message_at")
-                .whereColumn("user_id").isEqualTo(literal(message.getRecipientProfileId()))
-                .whereColumn("room_id").isEqualTo(literal(message.getRoomId()))
-                .build();
-        Row recipientIndexRow = connector.getSession().execute(recipientIndexSelect).one();
-        Instant recipientOldLastMessageAt = recipientIndexRow != null ? recipientIndexRow.getInstant("last_message_at") : null;
-
-        // Recipient: Batch index update, old conversation delete, new conversation insert
-        var recipientBatch = new ArrayList<BatchableStatement<?>>();
-        recipientBatch.add(QueryBuilder.insertInto(KEYSPACE, CONVERSATION_INDEX_TABLE)
-                .value("user_id", literal(message.getRecipientProfileId()))
-                .value("room_id", literal(message.getRoomId()))
-                .value("last_message_at", literal(message.getCreatedAt()))
-                .build());
-        if (recipientOldLastMessageAt != null) {
-            recipientBatch.add(QueryBuilder.deleteFrom(KEYSPACE, CONVERSATIONS_TABLE)
-                    .whereColumn("user_id").isEqualTo(literal(message.getRecipientProfileId()))
-                    .whereColumn("last_message_at").isEqualTo(literal(recipientOldLastMessageAt))
-                    .whereColumn("room_id").isEqualTo(literal(message.getRoomId()))
-                    .build());
-        }
-        recipientBatch.add(QueryBuilder.insertInto(KEYSPACE, CONVERSATIONS_TABLE)
-                .value("user_id", literal(message.getRecipientProfileId()))
-                .value("last_message_at", literal(message.getCreatedAt()))
-                .value("room_id", literal(message.getRoomId()))
-                .value("other_user_id", literal(message.getProfileId()))
-                .value("other_username", literal(message.getUsername()))
-                .value("last_message_content", literal(message.getContent()))
-                .build());
-
-        // Combine all operations
-        BatchStatement batch = BatchStatement.builder(BatchType.UNLOGGED)
-                .addStatement(messageInsert.build())
-                .addStatements(senderBatch)
-                .addStatements(recipientBatch)
-                .build();
-
         try {
+            // Insert into messages.messages
+            RegularInsert messageInsert = QueryBuilder.insertInto(KEYSPACE, MESSAGES_TABLE)
+                    .value("room_id", literal(message.getRoomId()))
+                    .value("created_at", literal(message.getCreatedAt()))
+                    .value("message_id", literal(message.getMessageId()))
+                    .value("profile_id", literal(message.getProfileId()))
+                    .value("username", literal(message.getUsername()))
+                    .value("recipient_profile_id", literal(message.getRecipientProfileId()))
+                    .value("recipient_username", literal(message.getRecipientUsername()))
+                    .value("content", literal(message.getContent()))
+                    .value("message_type", literal(message.getMessageType()))
+                    .value("resource_id", literal(message.getResourceId()))
+                    .value("thread_id", literal(message.getThreadId()))
+                    .value("edited_at", literal(message.getEditedAt()))
+                    .value("deleted_at", literal(message.getDeletedAt()))
+                    .value("pinned", literal(message.getPinned()))
+                    .value("metadata", literal(message.getMetadata()));
+
+            // Sender: Query index for old last_message_at
+            SimpleStatement senderIndexSelect = QueryBuilder.selectFrom(KEYSPACE, CONVERSATION_INDEX_TABLE)
+                    .column("last_message_at")
+                    .whereColumn("user_id").isEqualTo(literal(message.getProfileId()))
+                    .whereColumn("room_id").isEqualTo(literal(message.getRoomId()))
+                    .build();
+            Row senderIndexRow = connector.getSession().execute(senderIndexSelect).one();
+            Instant senderOldLastMessageAt = senderIndexRow != null ? senderIndexRow.getInstant("last_message_at") : null;
+
+            // Sender: Batch index update, old conversation delete, new conversation insert
+            var senderBatch = new ArrayList<BatchableStatement<?>>();
+            senderBatch.add(QueryBuilder.insertInto(KEYSPACE, CONVERSATION_INDEX_TABLE)
+                    .value("user_id", literal(message.getProfileId()))
+                    .value("room_id", literal(message.getRoomId()))
+                    .value("last_message_at", literal(message.getCreatedAt()))
+                    .build());
+            if (senderOldLastMessageAt != null) {
+                senderBatch.add(QueryBuilder.deleteFrom(KEYSPACE, CONVERSATIONS_TABLE)
+                        .whereColumn("user_id").isEqualTo(literal(message.getProfileId()))
+                        .whereColumn("last_message_at").isEqualTo(literal(senderOldLastMessageAt))
+                        .whereColumn("room_id").isEqualTo(literal(message.getRoomId()))
+                        .build());
+            }
+            senderBatch.add(QueryBuilder.insertInto(KEYSPACE, CONVERSATIONS_TABLE)
+                    .value("user_id", literal(message.getProfileId()))
+                    .value("last_message_at", literal(message.getCreatedAt()))
+                    .value("room_id", literal(message.getRoomId()))
+                    .value("other_user_id", literal(message.getRecipientProfileId()))
+                    .value("other_username", literal(message.getRecipientUsername()))
+                    .value("last_message_content", literal(message.getContent()))
+                    .build());
+
+            // Recipient: Query index for old last_message_at
+            SimpleStatement recipientIndexSelect = QueryBuilder.selectFrom(KEYSPACE, CONVERSATION_INDEX_TABLE)
+                    .column("last_message_at")
+                    .whereColumn("user_id").isEqualTo(literal(message.getRecipientProfileId()))
+                    .whereColumn("room_id").isEqualTo(literal(message.getRoomId()))
+                    .build();
+            Row recipientIndexRow = connector.getSession().execute(recipientIndexSelect).one();
+            Instant recipientOldLastMessageAt = recipientIndexRow != null ? recipientIndexRow.getInstant("last_message_at") : null;
+
+            // Recipient: Batch index update, old conversation delete, new conversation insert
+            var recipientBatch = new ArrayList<BatchableStatement<?>>();
+            recipientBatch.add(QueryBuilder.insertInto(KEYSPACE, CONVERSATION_INDEX_TABLE)
+                    .value("user_id", literal(message.getRecipientProfileId()))
+                    .value("room_id", literal(message.getRoomId()))
+                    .value("last_message_at", literal(message.getCreatedAt()))
+                    .build());
+            if (recipientOldLastMessageAt != null) {
+                recipientBatch.add(QueryBuilder.deleteFrom(KEYSPACE, CONVERSATIONS_TABLE)
+                        .whereColumn("user_id").isEqualTo(literal(message.getRecipientProfileId()))
+                        .whereColumn("last_message_at").isEqualTo(literal(recipientOldLastMessageAt))
+                        .whereColumn("room_id").isEqualTo(literal(message.getRoomId()))
+                        .build());
+            }
+            recipientBatch.add(QueryBuilder.insertInto(KEYSPACE, CONVERSATIONS_TABLE)
+                    .value("user_id", literal(message.getRecipientProfileId()))
+                    .value("last_message_at", literal(message.getCreatedAt()))
+                    .value("room_id", literal(message.getRoomId()))
+                    .value("other_user_id", literal(message.getProfileId()))
+                    .value("other_username", literal(message.getUsername()))
+                    .value("last_message_content", literal(message.getContent()))
+                    .build());
+
+            // Combine all operations
+            BatchStatement batch = BatchStatement.builder(BatchType.UNLOGGED)
+                    .addStatement(messageInsert.build())
+                    .addStatements(senderBatch)
+                    .addStatements(recipientBatch)
+                    .build();
+
             CqlSession session = connector.getSession();
             session.execute(batch);
             log.info("Saved message and updated conversations: room_id={}, message_id={}", message.getRoomId(), message.getMessageId());
             return message;
         } catch (Exception e) {
             log.error("Failed to save message and conversations: {}", e.getMessage(), e);
-            throw new RuntimeException("Failed to save message for room_id " + message.getRoomId(), e);
+            throw new AstraException("Failed to save message for room_id=" + message.getRoomId(), e);
         }
     }
 
@@ -219,17 +217,15 @@ public class MessageRepositoryImpl implements MessageRepository {
                 .whereColumn("user_id").isEqualTo(literal(userId))
                 .orderBy("last_message_at", DESC);
 
-
         ByteBuffer pagingStateBuffer = null;
         if (pageState != null) {
             try {
                 pagingStateBuffer = ByteBuffer.wrap(Base64.getUrlDecoder().decode(pageState));
             } catch (IllegalArgumentException e) {
                 log.error(String.format("Invalid pageState for conversations user_id=%s: %s", userId, e.getMessage()), e);
-                return new MessagePage(List.of(), null);
+                throw new AstraException("Invalid conversation headers pageState for user_id %s: %s".formatted(userId, e.getMessage()), e);
             }
         }
-
 
         SimpleStatement statement = select.build()
                 .setPageSize(pageSize)
@@ -264,7 +260,7 @@ public class MessageRepositoryImpl implements MessageRepository {
             return new MessagePage(conversations, nextPageState);
         } catch (Exception e) {
             log.error("Failed to fetch conversations for user_id {}: {}", userId, e.getMessage(), e);
-            throw new RuntimeException("Failed to fetch conversations", e);
+            throw new AstraException("Failed to fetch conversations", e);
         }
     }
 }
